# scorpio-data-environment

./: .gitignore  NOTICE  README.md  license-and-notice.txt
.github/: pull_request_template.md
docs/: control-plane-overview.md  coordinator-plan-formats.md  data-sources-databases-sftp.md  deployment.md  engine-distributed-dataframe-verification.md  engine-test-coverage-inventory.md  epic3-parity-matrix.md  grpc-codegen.md  license-notice-epic0.md  license-notice-epic1-python.md  license-notice-epic2-python.md  license-notice-epic3-python.md  object-store-credentials.md  operator-auth-multi-tenant.md  operator-observability.md  (+7 more)
engine/: .dockerignore  .gitignore  Cargo.toml  Dockerfile.scorpio-stack  README.md
engine/.cargo/: config.toml
engine/ballista-cli/: Cargo.toml
engine/ballista-cli/src/: command.rs  exec.rs  main.rs
engine/ballista/client/src/: extension.rs
engine/ballista/client/tests/: context_basic.rs  context_checks.rs  context_setup.rs  sort_shuffle.rs
engine/ballista/client/tests/common/: mod.rs
engine/ballista/core/: Cargo.toml  README.md
engine/ballista/core/src/: client.rs  config.rs  extension.rs  lib.rs  object_store.rs  planner.rs  registry.rs  utils.rs
engine/ballista/core/src/execution_plans/: distributed_query.rs  shuffle_reader.rs  shuffle_writer.rs  unresolved_shuffle.rs
engine/ballista/core/src/execution_plans/sort_shuffle/: buffer.rs
engine/ballista/core/src/serde/: mod.rs
engine/ballista/core/src/serde/scheduler/: from_proto.rs
engine/ballista/core/tests/: s3_minio_integration.rs
engine/ballista/executor/: Cargo.toml
engine/ballista/executor/src/: collect.rs  execution_loop.rs  executor.rs  executor_process.rs  executor_server.rs  flight_service.rs  lib.rs  standalone.rs
engine/ballista/scheduler/: Cargo.toml
engine/ballista/scheduler/src/: config.rs  display.rs  flight_proxy_service.rs  planner.rs  scheduler_process.rs  standalone.rs  test_utils.rs
engine/ballista/scheduler/src/api/: handlers.rs
engine/ballista/scheduler/src/cluster/: memory.rs  mod.rs
engine/ballista/scheduler/src/cluster/event/: mod.rs
engine/ballista/scheduler/src/cluster/test_util/: mod.rs
engine/ballista/scheduler/src/metrics/: prometheus.rs
engine/ballista/scheduler/src/scheduler_server/: grpc.rs  mod.rs  query_stage_scheduler.rs
engine/ballista/scheduler/src/state/: distributed_explain.rs  execution_graph.rs  execution_graph_dot.rs  execution_stage.rs  executor_manager.rs  mod.rs  task_manager.rs
engine/ballista/scheduler/src/state/aqe/: adapter.rs  execution_plan.rs  mod.rs  planner.rs
engine/ballista/scheduler/src/state/aqe/optimizer_rule/: datafusion_patch.rs
engine/ballista/scheduler/src/state/aqe/test/: alter_stages.rs  mod.rs
engine/scorpio-cli/: Cargo.toml  Dockerfile  README.md
engine/scorpio-cli/src/: command.rs  lib.rs  main.rs
engine/scorpio/client/: Cargo.toml  README.md
engine/scorpio/client/src/: extension.rs  lib.rs  prelude.rs
engine/scorpio/client/tests/: bugs.rs  context_basic.rs  context_checks.rs  context_setup.rs  context_unsupported.rs  job_contract_serde.rs  sort_shuffle.rs
engine/scorpio/client/tests/common/: mod.rs
engine/scorpio/core/: Cargo.toml  README.md
engine/scorpio/core/src/: client.rs  config.rs  diagram.rs  error.rs  event_loop.rs  extension.rs  lib.rs  object_store.rs  planner.rs  python_udf.rs  utils.rs
engine/scorpio/core/src/execution_plans/: distributed_query.rs  shuffle_reader.rs  shuffle_writer.rs  unresolved_shuffle.rs
engine/scorpio/core/src/execution_plans/sort_shuffle/: reader.rs  spill.rs  writer.rs
engine/scorpio/core/src/serde/: mod.rs
engine/scorpio/core/src/serde/scheduler/: mod.rs  to_proto.rs
engine/scorpio/core/tests/: s3_minio_integration.rs
engine/scorpio/executor/: Cargo.toml
engine/scorpio/executor/src/: collect.rs  config.rs  execution_engine.rs  execution_loop.rs  executor.rs  executor_process.rs  executor_server.rs  flight_service.rs  lib.rs  python_udf_worker_pool.rs  standalone.rs
engine/scorpio/executor/src/metrics/: mod.rs
engine/scorpio/scheduler/: Cargo.toml
engine/scorpio/scheduler/src/: config.rs  display.rs  distributed_plan_invariants_tests.rs  flight_proxy_service.rs  lib.rs  planner.rs  scheduler_process.rs  standalone.rs  test_utils.rs
engine/scorpio/scheduler/src/api/: handlers.rs
engine/scorpio/scheduler/src/cluster/: memory.rs  mod.rs
engine/scorpio/scheduler/src/cluster/test_util/: mod.rs
engine/scorpio/scheduler/src/metrics/: mod.rs  prometheus.rs
engine/scorpio/scheduler/src/physical_optimizer/: join_selection.rs
engine/scorpio/scheduler/src/scheduler_server/: event.rs  external_scaler.rs  grpc.rs  mod.rs  query_stage_scheduler.rs
engine/scorpio/scheduler/src/state/: distributed_explain.rs  execution_graph.rs  execution_graph_dot.rs  execution_stage.rs  executor_manager.rs  mod.rs  session_manager.rs  task_manager.rs
engine/scorpio/scheduler/src/state/aqe/: adapter.rs  execution_plan.rs  mod.rs  planner.rs
engine/scorpio/scheduler/src/state/aqe/optimizer_rule/: distributed_exchange.rs
engine/scorpio/scheduler/src/state/aqe/test/: alter_stages.rs  mod.rs  plan_to_stages.rs
python/pipeline/: README.md  pyproject.toml
python/pipeline/src/scorpio_pipeline/: __init__.py
python/scorpio/: NOTICE  README.md  pyproject.toml
python/scorpio/src/scorpio/: __init__.py  catalog.py  config.py  exceptions.py  python_api_meta.py  session.py
python/scorpio/src/scorpio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/scorpio/src/scorpio/_grpc/: __init__.py
python/scorpio/src/scorpio/_rest/: __init__.py  coordinator.py
python/scorpio/src/scorpio/compat/: __init__.py
python/scorpio/src/scorpio/dataframe/: __init__.py  frame.py  io.py  job.py  plan.py  sql.py
python/scorpio/tests/: conftest.py  coordinator_epic3_handler.py  test_catalog_and_local_session.py  test_catalog_session.py  test_dataframe_plan.py  test_epic3_jobs.py  test_epic4_python_udf_registration.py  test_monorepo_engine_layout.py  test_openapi_contract.py  test_session_builder.py  test_session_http_roundtrip.py
(+75 files in other folders)
