[workspace]
exclude = ["benchmarks", "dev/msrvcheck", "examples", "python"]
members = [
    "ballista-cli",
    "ballista/client",
    "ballista/core",
    "ballista/executor",
    "ballista/scheduler",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.91.1"
license = "Apache-2.0"

[workspace.dependencies]
arrow = { version = "58", features = ["ipc_compression"] }
arrow-flight = { version = "58", features = ["flight-sql-experimental"] }
clap = { version = "4.5", features = ["derive", "cargo"] }

datafusion = "53"
datafusion-cli = "53"
datafusion-proto = "53"
datafusion-proto-common = "53"
datafusion-spark = "53"
datafusion-substrait = "53"

insta = "1.47"
object_store = "0.13"
prost = "0.14"
prost-types = "0.14"
rstest = { version = "0.26" }
tonic = { version = "0.14" }
tonic-build = { version = "0.14", default-features = false, features = [
    "transport",
] }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctor = { version = "0.8" }
mimalloc = { version = "0.1" }

tokio = { version = "1" }
uuid = { version = "1.23", features = ["v4", "v7"] }
rand = { version = "0.9" }
env_logger = { version = "0.11" }
futures = { version = "0.3" }
log = { version = "0.4" }
parking_lot = { version = "0.12" }
tempfile = { version = "3.27" }
dashmap = { version = "6.1" }
async-trait = { version = "0.1" }
serde = { version = "1.0" }
tokio-stream = { version = "0.1" }
url = { version = "2.5" }

# Default for `cargo build` and `cargo test` (unless `--release` / another `--profile`).
# Keeps rebuild scope small: incremental codegen, no LTO, parallel codegen units.
[profile.dev]
codegen-units = 256
incremental = true
lto = false

# cargo build --profile release-lto
[profile.release-lto]
codegen-units = 1
inherits = "release"
lto = true

# cargo build --profile release-nonlto
[profile.release-nonlto]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
inherits = "release"
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.ci]
inherits = "dev"
incremental = false
debug = false
debug-assertions = false
strip = "debuginfo"

[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false
