[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scorpio"
version = "0.0.0"
description = "Scorpio's Python API (scorpio-python-api): thin coordinator client; session + lazy DataFrame over the Rust engine (Epic 1–2+)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "grpcio>=1.60,<2",
  "protobuf>=4.25,<6",
  "pyarrow>=14,<21",
  "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = ["pytest", "grpcio-tools>=1.60,<2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: optional tests against a live Compose/k8s stack (SCORPIO_INTEGRATION=1)",
]
